@@ -62,7 +62,7 @@ public class Principal {
         listaDePeliculas.add(otraPelicula);
 
         System.out.println("Tamaño de la lista: " + listaDePeliculas.size());
-        System.out.println("La primera pelicula es: " + listaDePeliculas.get(0).getNombre());
+        System.out.println("La primera pelicula es: " + listaDePeliculas.getFirst().getNombre());
 
         System.out.println(listaDePeliculas);
     }
